@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 16-03-2006 fixed: aspect ratio of dvd's would sometimes not update between different parts of dvd.
  - 16-03-2006 changed: Smart playlist listing now use the usual Songs view modes.
  - 16-03-2006 added: Dialog.Close(window) built in function.
  - 16-03-2006 fixed: IMDb thumbnails were not immediately shown after a lookup.
